# autoresearch_network

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  prepare.py  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml
.validator-state/: best_train.py  global_best.json  state.npz
.validator-state-live/: best_train.py  global_best.json  miner_stats.json  state.npz  submission_hashes.json
.validator-state-live-193/: state.npz
.validator-state-smoke/: state.npz
autoresearch/: __init__.py  __main__.py  constants.py  demo_epic3.py  demo_epic4.py  demo_format.py  experiment_runner.py  hardware.py  health.py  live_relay_proof.py  mock.py  mutations.py  protocol.py  validator_round_showcase.py
autoresearch/base/: __init__.py  miner.py  neuron.py  validator.py
autoresearch/data/: __init__.py  prepare.py  program.md  pyproject.toml
autoresearch/utils/: __init__.py  config.py
autoresearch/validator/: __init__.py  best_tracker.py  forward.py  guards.py  replay.py  reward.py  stats.py
docs/: LIVE_RELAY_SHOWCASE.md  MINING.md  VALIDATING.md
docs/context_engineering/evaluations/: 2026-03-14_evaluation_all-open-tickets.md  2026-03-14_evaluation_epic-1-epic-2-foundation-rerun.md  2026-03-14_evaluation_epic-1-epic-2-foundation.md  2026-03-14_evaluation_epic-1-epic-2-rerun.md  2026-03-14_evaluation_epic-4-validator-implementation.md  2026-03-14_evaluation_tickets-1-7-acceptance-audit.md  2026-03-15_evaluation_current-workspace_ticket-audit_karpathy-parity.md
docs/context_engineering/test_reports/: 2026-03-14_protocol_demo_output.txt
neurons/: __init__.py  miner.py  validator.py
scripts/: __init__.py  modal_miner_193.py  modal_miner_193_http.py  modal_miner_193_web_support.py
tests/: test_constants.py  test_experiment_runner.py  test_hardware.py  test_health.py  test_integration.py  test_live_relay_proof.py  test_miner.py  test_modal_miner_193.py  test_modal_miner_193_web_support.py  test_mutations.py  test_protocol.py  test_validator_best_tracker.py  test_validator_forward.py  test_validator_guards.py  test_validator_replay.py  test_validator_reward.py  test_validator_scaffold.py  test_validator_state.py  test_validator_stats.py  validator_test_utils.py
tests/fixtures/: reference_train.py
